tests/script_errors/const_expr_range_bad_start/error.txt
Error: 
    1 | {"snot": [0,1,2,3,4,5,6]}.snot["bad":2]
      |                                ^^^^^ Conflicting types, got string but expected integer